--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
-  "extends": "@rocketseat/eslint-config/react"
+  "extends": [
+    "plugin:testing-library/react",
+    "plugin:jest-dom/recommended",
+    "@rocketseat/eslint-config/react"
+]
 }
 
