--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test":"jest",
-    "test:watch":"jest --watchAll"
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@types/node": "20.4.4",
@@ -26,6 +28,14 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@storybook/addon-essentials": "^7.1.1",
+    "@storybook/addon-interactions": "^7.1.1",
+    "@storybook/addon-links": "^7.1.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.1.1",
+    "@storybook/nextjs": "^7.1.1",
+    "@storybook/react": "^7.1.1",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "eslint": "^8.45.0",
@@ -33,6 +43,7 @@
     "eslint-plugin-testing-library": "^5.11.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "storybook": "^7.1.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
