--- a/package.json
+++ b/package.json
@@ -16,26 +16,14 @@
     "@auth0/nextjs-auth0": "^3.0.0-beta.3",
     "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.16",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "phosphor-react": "^1.4.1",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-router-dom": "^6.14.2",
-    "react-toastify": "^9.1.3",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
+    
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/node": "20.4.4",
+    "@types/react": "18.2.16",
+    "@types/react-dom": "18.2.7",
     "@storybook/addon-essentials": "^7.1.1",
     "@storybook/addon-interactions": "^7.1.1",
     "@storybook/addon-links": "^7.1.1",
@@ -53,6 +41,19 @@
     "jest-environment-jsdom": "^29.6.1",
     "storybook": "^7.1.1",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "eslint-config-next": "13.4.12",
+    "next": "13.4.12",
+    "phosphor-react": "^1.4.1",
+    "postcss": "8.4.27",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6"
   }
 }
