--- a/package.json
+++ b/package.json
@@ -16,14 +16,11 @@
     "@auth0/nextjs-auth0": "^3.0.0-beta.3",
     "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
-    
+    "tailwind-merge": "^1.14.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.16",
-    "@types/react-dom": "18.2.7",
     "@storybook/addon-essentials": "^7.1.1",
     "@storybook/addon-interactions": "^7.1.1",
     "@storybook/addon-links": "^7.1.1",
@@ -34,17 +31,17 @@
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "@types/node": "20.4.4",
+    "@types/react": "18.2.16",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "^8.45.0",
+    "eslint-config-next": "13.4.12",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-testing-library": "^5.11.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "storybook": "^7.1.1",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.27",
@@ -53,7 +50,10 @@
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
+    "storybook": "^7.1.1",
     "tailwindcss": "3.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "5.1.6"
   }
 }
