--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@storybook/addon-interactions": "^7.1.1",
     "@storybook/addon-links": "^7.1.1",
     "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling": "^1.3.4",
     "@storybook/blocks": "^7.1.1",
     "@storybook/nextjs": "^7.1.1",
     "@storybook/react": "^7.1.1",
@@ -34,7 +35,7 @@
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.12",
@@ -44,7 +45,7 @@
     "jest-environment-jsdom": "^29.6.1",
     "next": "13.4.12",
     "phosphor-react": "^1.4.1",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
