config: change module to ES2020

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "ts-node": {
     "compilerOptions": {
-      "module": "es2015",
+      "module": "ES2020",
       "moduleResolution": "node"
     }
   },
