--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@auth0/nextjs-auth0": "^3.0.0-beta.3",
     "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "tailwind-merge": "^1.14.0",
-    "zod": "^3.21.4"
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
