--- a/package.json
+++ b/package.json
@@ -16,7 +16,16 @@
     "@auth0/nextjs-auth0": "^3.0.0-beta.3",
     "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "tailwind-merge": "^1.14.0"
+    "axios": "^1.4.0",
+    "next": "13.4.12",
+    "phosphor-react": "^1.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
@@ -35,23 +44,14 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.14",
-    "axios": "^1.4.0",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-testing-library": "^5.11.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "next": "13.4.12",
-    "phosphor-react": "^1.4.1",
     "postcss": "^8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-router-dom": "^6.14.2",
-    "react-toastify": "^9.1.3",
     "storybook": "^7.1.1",
-    "tailwindcss": "3.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
