--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expense-tracker-portal",
-  "version": "0.1.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -18,7 +18,15 @@
     "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "zod": "^3.21.4"
+    "next": "13.4.12",
+    "phosphor-react": "^1.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
@@ -26,6 +34,7 @@
     "@storybook/addon-interactions": "^7.1.1",
     "@storybook/addon-links": "^7.1.1",
     "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling": "^1.3.4",
     "@storybook/blocks": "^7.1.1",
     "@storybook/nextjs": "^7.1.1",
     "@storybook/react": "^7.1.1",
@@ -35,24 +44,15 @@
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "cypress": "^12.17.2",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-testing-library": "^5.11.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "next": "13.4.12",
-    "phosphor-react": "^1.4.1",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-router-dom": "^6.14.2",
-    "react-toastify": "^9.1.3",
+    "postcss": "^8.4.27",
     "storybook": "^7.1.1",
-    "tailwindcss": "3.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
