--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expense-tracker-portal",
-  "version": "0.1.1",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -50,6 +50,7 @@
     "eslint-plugin-testing-library": "^5.11.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "next-router-mock": "^0.9.7",
     "postcss": "^8.4.27",
     "storybook": "^7.1.1",
     "ts-jest": "^29.1.1",
