--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expense-tracker-portal",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "next": "13.4.12",
+    "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -45,6 +46,7 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.14",
+    "axios-mock-adapter": "^1.21.5",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-jest-dom": "^5.0.1",
