--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.14",
-    "axios-mock-adapter": "^1.21.5",
+    "cypress": "^12.17.3",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-jest-dom": "^5.0.1",
