--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expense-tracker-portal",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
