--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.0.0-beta.3",
     "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "cypress": "^12.17.3",
+    "jwt-decode": "^3.1.2",
     "eslint-plugin-prettier": "^5.0.0",
     "next": "13.4.12",
     "nookies": "^2.5.2",
@@ -27,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
+    "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
