--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
+    "storybook-addon-react-router-v6": "^2.0.4",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "3.3.3"
@@ -41,6 +42,7 @@
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/addon-styling": "^1.3.4",
     "@storybook/blocks": "^7.1.1",
+    "@storybook/client-logger": "next",
     "@storybook/nextjs": "^7.1.1",
     "@storybook/react": "^7.2.3",
     "@storybook/testing-library": "^0.2.0",
