--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "cypress": "^12.17.3",
+    "eslint-plugin-prettier": "^5.0.0",
     "next": "13.4.12",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
