--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "jwt-decode": "^3.1.2",
     "eslint-plugin-prettier": "^5.0.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.12",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
@@ -52,8 +52,8 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.14",
-    "cypress": "^12.17.3",
     "axios-mock-adapter": "^1.21.5",
+    "cypress": "^12.17.3",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-testing-library": "^5.11.0",
@@ -61,6 +61,7 @@
     "jest-environment-jsdom": "^29.6.1",
     "next-router-mock": "^0.9.7",
     "postcss": "^8.4.27",
+    "react-alice-carousel": "^2.7.1",
     "storybook": "^7.1.1",
     "tailwind-scrollbar": "^3.0.5",
     "ts-jest": "^29.1.1",
