--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
-    "storybook-addon-react-router-v6": "^2.0.4",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "react-alice-carousel": "^2.7.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.1.1",
@@ -61,9 +61,7 @@
     "jest-environment-jsdom": "^29.6.1",
     "next-router-mock": "^0.9.7",
     "postcss": "^8.4.27",
-    "react-alice-carousel": "^2.7.1",
     "storybook": "^7.1.1",
-    "tailwind-scrollbar": "^3.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
