--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -16,6 +16,9 @@ jobs:
           node-version: 14
           cache: 'yarn'
 
+      - name: Install dependencies
+        run: yarn install
+
       - name: Run frontend tests
         run: yarn test
 
