--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -12,12 +12,10 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 20
           cache: 'yarn'
 
-      - run: 'yarn install'
-
-      - run: 'yarn test'
+      - run: 'yarn install --frozen-lockfile'
 
       - name: Test coverage
         run: |
