--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -10,23 +10,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set SKIP_CYPRESS_INSTALL
-        run: echo "SKIP_CYPRESS_INSTALL=true" >> $GITHUB_ENV
-
-      - uses: actions/setup-node@v3
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
         with:
-          node-version: 14
-          cache: 'yarn'
+          node-version: 16
 
-      - run: |
-          if [ "$SKIP_CYPRESS_INSTALL" != "true" ]; then
-            yarn install
-          fi
+      - name: Install dependencies
+        run: yarn install
 
-      - name: Install Jest
-        run: yarn add --dev jest
-
-      - run: 'yarn test'
+      - name: Run tests
+        run: yarn test
 
       - name: Test coverage
         run: |
