--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -16,15 +16,12 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: yarn install --legacy-peer-deps
-
-
-      - name: Run tests
-        run: yarn test
+        run: 'yarn add storybook -router -D'
+        run: 'yarn denv'
 
       - name: Test coverage
         run: |
-          yarn test
+          'yarn test'
 
       - name: Validate test coverage
         run: |
