--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -16,6 +16,7 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
+        run: yarn add storybook -router -D
         run: yarn
 
       - name: Test coverage
