--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,22 +1,24 @@
-name: Run Unit Tests
+name: Build Frontend
 
 on: [push]
 
 jobs:
-  run-unit-tests:
-    name: Run Unit Tests
+  build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-      - name: Use Node.js 16
+      - name: Setup Node.js and Yarn
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 14
+          yarn: true
 
-      - name: Install dependencies
-        run: yarn
+      - name: Install Dependencies
+        run: yarn install
 
       - name: Test coverage
         run: |
