--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expense-tracker-portal",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -63,6 +63,7 @@
     "next-router-mock": "^0.9.7",
     "postcss": "^8.4.27",
     "storybook": "^7.1.1",
+    "storybook-addon-react-router-v6": "^2.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
