--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "json":"json-server -p 3001 --watch db.json ",
     "test": "jest --coverage",
     "test:watch": "jest --watchAll --coverage",
     "storybook": "storybook dev -p 6006",
@@ -20,11 +21,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "json-server": "^0.17.3",
     "jwt-decode": "^3.1.2",
     "next": "13.4.12",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
@@ -32,8 +35,7 @@
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss": "3.3.3",
-    "react-alice-carousel": "^2.7.1"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.1.1",
