--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-alice-carousel": "^2.7.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
